<resources>
    <string name="app_name">HouseOwnerApp</string>
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>
    <string name="title_today_menu">Today\&apos;s Menu</string>
    <string name="title_meal">Meal</string>
    <string name="title_order">Orders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_my_order">My Order</string>
    <string name="title_my_add">Add New</string>
    <string name="title_make_order">Make Order</string>
    <string name="date_for_order">2023-09-21</string>
    <string name="meal_name">Breakfast</string>
    <string name="place_order">Place Order</string>
    <string name="check_out">Check Out</string>

    <string name="hint_menu_name">Name of the menu item</string>
    <string name="hint_unit_price">Unit price of the item</string>
    <string name="update">Update</string>
    <string name="enter_menu_name">ex: Rice \&amp; Curry - Chicken</string>
    <string name="enter_unit_price">ex: 123.00</string>
    <string name="lbl_rejected">Rejected</string>
    <string name="lbl_all">All</string>
    <string name="lbl_pending">Pending...</string>
    <string name="lbl_accepted">Accepted</string>
    <string name="lbl_completed">Completed</string>

    <!-- status -->
    <string name="order_status_pending">pending</string>
    <string name="order_status_accepted">accepted</string>
    <string name="order_status_rejected">rejected</string>
    <string name="order_status_completed">completed</string>
    <string name="order_status_cancelled">cancelled</string>
    <string name="something_went_wrong">Something went wrong when loading this screen</string>
    <string name="title_menu_edit">Edit Menu</string>
</resources>