<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="menuVM"
            type="com.dilan.kamuda.houseownerapp.feature.menu.MenuViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.add.AddNewFragment">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@color/black">

            <ImageButton
                android:id="@+id/btnArrowBack"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_round_arrow_back_24dp"
                android:visibility="invisible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_menu"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@color/transparent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/header2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/header"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/tvMeal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/meal_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMealDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date_for_order"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFoodMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnUpdateMenu"
            android:layout_below="@+id/header2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdateMenu"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:layout_alignBaseline="@+id/btnAddNew"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/update" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddNew"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/btnUpdateMenu"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:enabled="true"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/title_my_add"
            android:visibility="invisible"/>

    </RelativeLayout>

</layout>